--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 name: CICD_Assignment2
 on:
-  release:
-     types: [published]
+  push:
+    #types: [published]
 jobs:
   Push_To_Docker:
     runs-on: ubuntu-latest
