--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,13 +8,46 @@ jobs:
     steps:
       - name: Checkout the code from github repo
         uses: actions/checkout@v2
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Build
-        uses: docker/setup-buildx-action@v2
-     
+
+      #- name: Set up QEMU
+      #  uses: docker/setup-qemu-action@v2
+      
+      # https://github.com/marketplace/actions/docker-login
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      # https://github.com/marketplace/actions/docker-setup-buildx
+      - name: Set up Docker Build
+        uses: docker/setup-buildx-action@v2
+     
+     # https://github.com/marketplace/actions/build-and-push-docker-images
+     - name: Build and push Docker images
+       uses: 
+
+  Send notification to Slack:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Send custom JSON data to Slack workflow
+        id: slack
+        uses: slackapi/slack-github-action@v1.18.0
+        with:
+    # For posting a rich message using Block Kit
+        payload: |
+        {
+          "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+          "blocks": [
+            {
+              "type": "section",
+              "text": {
+                "type": "mrkdwn",
+                "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+              }
+            }
+          ]
+        }
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_TEST }}
+      SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
