--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,15 +4,15 @@ on:
     types: [published]
 
 jobs:
-   Push_To_Docker:
+  Push_To_Docker:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout the code from github repo
         uses: actions/checkout@v3
 
-        #- name: Set up QEMU
-        #  uses: docker/setup-qemu-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       
       # https://github.com/marketplace/actions/docker-login
       - name: Login to DockerHub
